# RalphWiggumLoop

./: .editorconfig  .env.example  .gitignore  Makefile  PRD.md  README.md  progress.txt  pyproject.toml  ralph.ps1  ralph.sh
.github/workflows/: daily.yml  scaffold_verify.yml
scripts/: verify_scaffold.sh
src/: learner.py  predictor.py  scheduler.py  validator.py
src/smaps/: __init__.py  api.py  config.py  db.py  evaluator.py  logging.py  migrations.py  models.py  notifier.py  pipeline.py  retrainer.py
src/smaps/collectors/: __init__.py  fundamentals.py  ingest.py  price.py  sentiment.py
src/smaps/features/: __init__.py  combined.py  fundamental.py  pipeline.py  sentiment.py  technical.py
src/smaps/model/: __init__.py  predictor.py  registry.py  trainer.py
tests/: conftest.py  test_api_dashboard.py  test_api_performance.py  test_api_predictions.py  test_cli.py  test_collectors_fundamentals.py  test_collectors_price.py  test_collectors_sentiment.py  test_drift_detection.py  test_evaluation_persistence.py  test_evaluator.py  test_feature_pipeline.py  test_feature_snapshot_persistence.py  test_features_combined.py  test_features_fundamental.py  test_features_sentiment.py  test_features_technical.py  test_fundamentals_persistence.py  test_ingest.py  test_leakage_prevention.py  test_metrics.py  test_migrations.py  test_model_registry.py  test_model_trainer.py  test_models.py  test_notifier.py  test_ohlcv_persistence.py  test_oos_validation.py  test_pipeline.py  test_prediction_persistence.py  test_predictor.py  test_retrain.py  test_retrainer.py  test_rollback.py  test_sentiment_persistence.py  test_smoke.py
