[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smaps"
version = "0.1.0"
description = "Self-learning Market Analysis & Prediction System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "joblib>=1.3",
    "pydantic-settings>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "uvicorn>=0.27",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true
